Made stress test compile with JDK 1.4. Modified MessageStore to be pluggable.