@@ -91,7 +91,7 @@ public class RecoveringReceiver extends Receiver
                   return;
                }
                String prodName = m.getStringProperty("PROD_NAME");
-               Integer msgCount = Integer.valueOf(m.getIntProperty("MSG_NUMBER"));  
+               Integer msgCount = new Integer(m.getIntProperty("MSG_NUMBER"));
                Count count = (Count)counts.get(prodName);
                if (count == null)
                {
@@ -144,7 +144,7 @@ public class RecoveringReceiver extends Receiver
                   return;
                }
                String prodName = m.getStringProperty("PROD_NAME");               
-               Integer msgCount = Integer.valueOf(m.getIntProperty("MSG_NUMBER"));   
+               Integer msgCount = new Integer(m.getIntProperty("MSG_NUMBER"));   
                Count count = (Count)counts.get(prodName);
                if (count == null)
                {
